# flybrowser

./: .gitignore  ARCHITECTURE.md  Dockerfile  ERROR_HANDLING_IMPROVEMENTS.md  INSTALL_GUIDE.md  JUPYTER_INTEGRATION_SUMMARY.md  README.md  Taskfile.yml  install.sh  pyproject.toml  pyrightconfig.json  test_streaming.py  uninstall.sh
docker/: Dockerfile  docker-compose.cluster.yml  docker-compose.yml  haproxy.cfg
docs/: getting-started.md  index.md
docs/advanced/: custom-providers.md  custom-tools.md  performance.md  troubleshooting.md
docs/architecture/: context.md  framework-integration.md  llm-integration.md  memory.md  metadata-enrichment.md  overview.md  react.md  security.md  tools.md  validation.md
docs/cli/: direct-commands.md  pipelines.md  session-management.md
docs/deployment/: cluster.md  docker.md  embedded.md  kubernetes.md  standalone.md
docs/examples/: index.md  ui-testing.md  web-scraping.md  workflow-automation.md
docs/features/: act.md  agent.md  extract.md  navigation.md  observability.md  observe.md  obstacle-detection.md  pii.md  screenshots.md  search.md  stealth.md  streaming-recording.md  streaming.md  validator-agents.md
docs/getting-started/: concepts.md  installation.md  quickstart.md  setup-wizard.md
docs/guides/: authentication.md  basic-automation.md  data-extraction.md  error-handling.md  form-automation.md  multi-page-workflows.md
docs/plans/: 2026-02-13-comprehensive-overhaul-design.md  2026-02-13-comprehensive-overhaul-plan.md
docs/reference/: api.md  cli.md  configuration.md  rest-api.md  sdk.md
examples/: 01_basic_usage.py  02_action_agent.py  03_navigation_agent.py  04_workflow_agent.py  05_monitoring_agent.py  06_pii_safe_automation.py  07_server_mode.py  08_rest_api_client.py  09_llm_providers.py  10_integrated_example.py  README.md
examples/basic/: quickstart.py
examples/scraping/: hackernews.py  pagination.py  price_monitor.py  product_extraction.py
examples/streaming/: basic_streaming.py  recording.py  rtmp_streaming.py
examples/testing/: e2e_checkout.py  form_validation.py  navigation_testing.py  visual_testing.py
examples/workflows/: booking.py  data_sync.py  invoice_processing.py  job_application.py  monitoring.py  report_generation.py  research.py
flybrowser/: __init__.py  client.py  sdk.py
flybrowser/agents/: __init__.py  action_agent.py  browser_agent.py  config.py  extraction_agent.py  memory.py  monitoring_agent.py  navigation_agent.py  obstacle_detector.py  obstacle_patterns.py  obstacle_strategies.py  page_analyzer.py  page_map.py  parallel_explorer.py  parser.py  react_agent.py  response.py  schemas.py  screenshot_cache.py  sdk_integration.py  sitemap_graph.py  streaming.py  structured_llm.py  types.py  validation_agent.py  workflow_agent.py
flybrowser/agents/memory/: __init__.py  browser_memory.py
flybrowser/agents/middleware/: __init__.py  obstacle.py  screenshot.py
flybrowser/agents/toolkits/: __init__.py  captcha.py  extraction.py  interaction.py  navigation.py  search.py  system.py
flybrowser/agents/tools/: __init__.py  base.py  captcha.py  descriptions.py  extraction.py  interaction.py  navigation.py  page_analyzer.py  page_explorer.py  registry.py  search_api.py  search_human.py  search_rank.py  search_utils.py  system.py
flybrowser/agents/tools/search/: __init__.py  base_provider.py  coordinator.py  intent_detector.py  provider_registry.py  search_agent.py  search_agent_tool.py  types.py
flybrowser/cli/: __init__.py  cluster.py  direct.py  main.py  output.py  pipeline.py  repl.py  setup.py  uninstall.py
flybrowser/core/: __init__.py  browser.py  browser_pool.py  element.py  ffmpeg_recorder.py  page.py  performance.py  proxy_rotator.py  recording.py
flybrowser/llm/: __init__.py  anthropic_provider.py  base.py  chunking.py  config.py  context_compressor.py  conversation.py  cost_tracker.py  factory.py  framework_adapter.py  gemini_provider.py  ollama_provider.py  openai_provider.py  prompts.py  qwen_provider.py  rate_limiter.py  token_budget.py
flybrowser/observability/: metrics.py  tracing.py
flybrowser/prompts/: __init__.py  manager.py  registry.py  template.py
flybrowser/prompts/templates/: action_planning.yaml  data_extraction.yaml  element_detection.yaml  navigation_planning.yaml  page_monitoring.yaml  workflow_execution.yaml
flybrowser/prompts/templates/agents/: obstacle_detection_llm.yaml  obstacle_detection_vlm.yaml  (+1 more)
flybrowser/security/: __init__.py  pii_handler.py
flybrowser/service/: app.py  config.py  ha_app.py  models.py  session_manager.py  streaming.py  template_renderer.py
flybrowser/service/cluster/: storage.py
flybrowser/service/templates/: blank.html  completion.html  player.html
flybrowser/stealth/: __init__.py
flybrowser/stealth/captcha/: __init__.py  solver.py
flybrowser/stealth/fingerprint/: __init__.py  generator.py
flybrowser/stealth/proxy/: __init__.py  network.py
flybrowser/types/: __init__.py
flybrowser/utils/: __init__.py  execution_logger.py  logger.py  page_utils.py  text_normalizer.py  timing.py
tests/: conftest.py  test_context.py  test_rate_limit_retry.py
tests/agents/: conftest.py  test_browser_agent.py  test_browser_agent_middleware.py  test_extraction_validation.py  test_sdk_integration.py  test_streaming.py
tests/agents/memory/: test_browser_memory.py  test_browser_memory_framework.py
tests/agents/middleware/: __init__.py  test_middleware.py
tests/agents/toolkits/: conftest.py  test_all_toolkits.py  test_captcha.py  test_extraction.py  test_interaction.py  test_navigation.py  test_search.py  test_system.py
tests/cli/: test_direct_commands.py  test_pipeline.py
tests/integration/: test_api_standalone.py  test_framework_rest.py
tests/llm/: test_framework_adapter_retry.py
tests/unit/: test_conversation_manager.py  test_metrics.py  test_sdk.py  test_session_usage_tracking.py  test_tracing.py
(+17 files in other folders)
